# apmm

./: README.md  module.prop  pyproject.toml
.prompts/: module.prop设计.prompt  sync设计.prompt  uv_style.prompt  元数据文件.prompt  构建流程.prompt  版本控制.prompt  项目结构设计.prompt
rust/apmm/: Cargo.toml  pyproject.toml
rust/apmm/src/: cmds.rs  lib.rs  main.rs
rust/apmm/src/init/: boot_completed.rs  customize.rs  license.rs  mod.rs  module.rs  post_fs_data.rs  post_mount.rs  readme.rs  sepolicy.rs  service.rs  system_prop.rs  uninstall.rs  utils.rs
rust/apmm/src/init/webroot/: index.rs  mod.rs  webroot.rs
rust/apmm/src/sync/: mod.rs
src/apmm/: apmcp.py
