[package]
name = "apmm"
version = "0.1.0"
edition = "2024"

[lib]
name = "apmmcore"
crate-type = ["cdylib"]

[[bin]]
name = "apmm"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py38"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"

